[package]
name = "advent-of-code2020"
version = "0.2.0"
authors = ["Claire Durant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.3", features = ["yaml"]}
nom = "6"
petgraph = "0.5"
regex = "1"